--- a/helm/default-apps-eks/templates/apps.yaml
+++ b/helm/default-apps-eks/templates/apps.yaml
@@ -9,11 +9,11 @@ metadata:
     chart-operator.giantswarm.io/force-helm-upgrade: "{{ .forceUpgrade }}"
     {{- if .dependsOn }}
     # app-operator will make sure that the app on which it depends is installed before
-    app-operator.giantswarm.io/depends-on: {{ printf "%s-%s" $.Values.clusterID .dependsOn -}}
+    app-operator.giantswarm.io/depends-on: {{ printf "%s-%s" $.Values.clusterName .dependsOn -}}
     {{- end }}
   labels:
     {{- include "labels.common" $ | nindent 4 }}
-    {{- if .inCluster }}  
+    {{- if .inCluster }}
     app-operator.giantswarm.io/version: 0.0.0
     {{- end }}
   name: {{ $.Values.clusterName }}-{{ $appName }}
@@ -21,7 +21,7 @@ metadata:
 spec:
   catalog: {{ .catalog }}
   name: {{ .chartName }}
-  {{- if .inCluster }}  
+  {{- if .inCluster }}
   namespace: {{ $.Release.Namespace }}
   kubeConfig:
     inCluster: true
