--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -19,6 +19,8 @@ userConfig:
         #
         # For public clusters, this setting should have no effect, as they can use the HTTP01 solver.
         dns01RecursiveNameserversOnly: true
+        ciliumNetworkPolicy:
+          enabled: true
   externalDns:
     configMap:
       values: |
@@ -43,6 +45,11 @@ userConfig:
       values: |
         NetExporter:
           NTPServers: 169.254.169.123
+  observabilityBundle:
+    configMap:
+      values: |
+        ciliumNetworkPolicy:
+          enabled: true
 apps:
   capi-node-labeler:
     appName: capi-node-labeler
