--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -68,6 +68,7 @@ apps:
     appName: cert-exporter
     chartName: cert-exporter
     catalog: default
+    dependsOn: prometheus-operator-crd
     clusterValues:
       configMap: true
       secret: false
@@ -76,7 +77,7 @@ apps:
     namespace: kube-system
     # used by renovate
     # repo: giantswarm/cert-exporter
-    version: 2.6.0
+    version: 2.7.0
   certManager:
     appName: cert-manager
     chartName: cert-manager-app
@@ -120,6 +121,7 @@ apps:
     appName: net-exporter
     chartName: net-exporter
     catalog: default
+    dependsOn: prometheus-operator-crd
     clusterValues:
       configMap: true
       secret: false
