--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -25,7 +25,7 @@ userConfig:
       values: |
         serviceAccount:
           annotations:
-            eks.amazonaws.com/role-arn: {{ .Values.clusterName }}-cluster-autoscaler-role
+            eks.amazonaws.com/role-arn: arn:aws:iam::{{ include "aws-account-id" $ }}:role/{{ .Values.clusterName }}-cluster-autoscaler-role
   externalDns:
     configMap:
       values: |
@@ -61,6 +61,19 @@ userConfig:
         ciliumNetworkPolicy:
           enabled: true
 apps:
+  aws-pod-identity-webhook:
+    appName: aws-pod-identity-webhook
+    chartName: aws-pod-identity-webhook
+    catalog: default
+    clusterValues:
+      configMap: true
+      secret: false
+    dependsOn: cert-manager  # since aws-pod-identity-webhook installs a `Certificate` object
+    enabled: true
+    namespace: kube-system
+    # used by renovate
+    # repo: giantswarm/aws-pod-identity-webhook
+    version: 1.13.2
   capi-node-labeler:
     appName: capi-node-labeler
     chartName: capi-node-labeler
