--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -108,6 +108,18 @@ apps:
     # used by renovate
     # repo: giantswarm/chart-operator-extensions
     version: 1.1.1
+  cluster-autoscaler:
+    appName: cluster-autoscaler
+    chartName: cluster-autoscaler-app
+    catalog: default
+    clusterValues:
+      configMap: true
+      secret: false
+    enabled: true
+    namespace: kube-system
+    # used by renovate
+    # repo: giantswarm/cluster-autoscaler-app
+    version: 1.27.3-gs5
   externalDns:
     appName: external-dns
     chartName: external-dns-app
