set node-role.kubernetes.io/control-plane to null

--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -29,6 +29,7 @@ userConfig:
         node:
           nodeSelector:
             node-role.kubernetes.io/worker: ""
+            node-role.kubernetes.io/control-plane: null
           caBundlePath: "/etc/ssl/certs/ca-bundle.crt"
   externalDns:
     configMap:
