Add cluster-autoscaler (#58)
* Add cluster-autoscaler

* changelog

* add app to list

* fix ARN

* Updated cluster-autoscaler version, added nodeSelector and fixed caBundlePath in values

* set node-role.kubernetes.io/control-plane to null

* Remove aws-pod-identity-webhook

---------

Co-authored-by: Daniel Simionato <weseven@gmail.com>
Co-authored-by: Daniel Simionato <weseven@users.noreply.github.com>
Co-authored-by: Daniel Simionato <daniel@giantswarm.io>

--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -20,6 +20,17 @@ userConfig:
         dns01RecursiveNameserversOnly: true
         ciliumNetworkPolicy:
           enabled: true
+  cluster-autoscaler:
+    configMap:
+      values: |
+        serviceAccount:
+          annotations:
+            eks.amazonaws.com/role-arn: arn:aws:iam::{{ include "aws-account-id" $ }}:role/{{ .Values.clusterName }}-cluster-autoscaler-role
+        node:
+          nodeSelector:
+            node-role.kubernetes.io/worker: ""
+            node-role.kubernetes.io/control-plane: null
+          caBundlePath: "/etc/ssl/certs/ca-bundle.crt"
   externalDns:
     configMap:
       values: |
@@ -108,6 +119,18 @@ apps:
     # used by renovate
     # repo: giantswarm/chart-operator-extensions
     version: 1.1.1
+  cluster-autoscaler:
+    appName: cluster-autoscaler
+    chartName: cluster-autoscaler-app
+    catalog: default
+    clusterValues:
+      configMap: true
+      secret: false
+    enabled: true
+    namespace: kube-system
+    # used by renovate
+    # repo: giantswarm/cluster-autoscaler-app
+    version: 1.27.3-gs5
   externalDns:
     appName: external-dns
     chartName: external-dns-app
