--- a/helm/default-apps-eks/templates/apps.yaml
+++ b/helm/default-apps-eks/templates/apps.yaml
@@ -49,8 +49,16 @@ spec:
       name: {{ $.Values.clusterName }}-cluster-values
       namespace: {{ $.Release.Namespace }}
   {{- end }}
-  {{- end }} 
+  {{- end }}
 {{- end }}
+  {{- if .extraConfigs }}
+  extraConfigs:
+  {{- range $extraConfig := .extraConfigs }}
+  - kind: {{ $extraConfig.kind }}
+    name: {{ tpl $extraConfig.name $ }}
+    namespace: {{ tpl $extraConfig.namespace $ }}
+  {{- end }}
+  {{- end }}
 {{- with (get $.Values.userConfig $key) }}
   userConfig:
   {{- if .configMap }}
