test with coredns

--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -131,6 +131,18 @@ apps:
     # used by renovate
     # repo: giantswarm/cluster-autoscaler-app
     version: 1.27.3-gs5
+  coreDNS:
+    appName: coredns
+    chartName: coredns-app
+    catalog: default
+    clusterValues:
+      configMap: true
+      secret: false
+    forceUpgrade: true
+    namespace: kube-system
+    # used by renovate
+    # repo: giantswarm/coredns-app
+    version: 1.17.0
   externalDns:
     appName: external-dns
     chartName: external-dns-app
