--- a/helm/default-apps-eks/templates/apps.yaml
+++ b/helm/default-apps-eks/templates/apps.yaml
@@ -57,6 +57,9 @@ spec:
   - kind: {{ $extraConfig.kind }}
     name: {{ tpl $extraConfig.name $ }}
     namespace: {{ tpl $extraConfig.namespace $ }}
+    {{- if $extraConfig.priority }}
+    priotity: {{ $extraConfig.priority }}
+    {{- end}}
   {{- end }}
   {{- end }}
 {{- with (get $.Values.userConfig $key) }}
