priotity typo fix

--- a/helm/default-apps-eks/templates/apps.yaml
+++ b/helm/default-apps-eks/templates/apps.yaml
@@ -58,7 +58,7 @@ spec:
     name: {{ tpl $extraConfig.name $ }}
     namespace: {{ tpl $extraConfig.namespace $ }}
     {{- if $extraConfig.priority }}
-    priotity: {{ $extraConfig.priority }}
+    priority: {{ $extraConfig.priority }}
     {{- end}}
   {{- end }}
   {{- end }}
