Teleport kube agent (#74)
* add teleport-kube-agent app

* extraConfigs addition on app template

* test with coredns

* coredns 1.21.0

* enabled flag

* coreDNS remove from apps

* leftover fix

* CHANGELOG update

* typo

* fix obs-bundle new version

* bump teleport-kube-agent to 0.7.1

* priority added on extraConfigs

* comment on configmap creation

* priotity typo fix

--- a/helm/default-apps-eks/templates/apps.yaml
+++ b/helm/default-apps-eks/templates/apps.yaml
@@ -49,8 +49,19 @@ spec:
       name: {{ $.Values.clusterName }}-cluster-values
       namespace: {{ $.Release.Namespace }}
   {{- end }}
-  {{- end }} 
+  {{- end }}
 {{- end }}
+  {{- if .extraConfigs }}
+  extraConfigs:
+  {{- range $extraConfig := .extraConfigs }}
+  - kind: {{ $extraConfig.kind }}
+    name: {{ tpl $extraConfig.name $ }}
+    namespace: {{ tpl $extraConfig.namespace $ }}
+    {{- if $extraConfig.priority }}
+    priority: {{ $extraConfig.priority }}
+    {{- end}}
+  {{- end }}
+  {{- end }}
 {{- with (get $.Values.userConfig $key) }}
   userConfig:
   {{- if .configMap }}
