--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -114,6 +114,19 @@ apps:
     # used by renovate
     # repo: giantswarm/chart-operator-extensions
     version: 1.1.2
+  ciliumServiceMonitors:
+    appName: cilium-servicemonitors
+    chartName: cilium-servicemonitors
+    catalog: default
+    enabled: true
+    clusterValues:
+      configMap: false
+      secret: false
+    dependsOn: prometheus-operator-crd
+    namespace: kube-system
+    # used by renovate
+    # repo: giantswarm/cilium-servicemonitors-app
+    version: 0.1.2
   cluster-autoscaler:
     appName: cluster-autoscaler
     chartName: cluster-autoscaler-app
