--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -152,6 +152,15 @@ apps:
     # used by renovate
     # repo: giantswarm/external-dns-app
     version: 3.0.0
+  k8sDnsNodeCacheApp:
+    appName: k8s-dns-node-cache
+    chartName: k8s-dns-node-cache-app
+    catalog: default
+    enabled: true
+    namespace: kube-system
+    # used by renovate
+    # repo: giantswarm/k8s-dns-node-cache-app
+    version: 2.6.1
   metricsServer:
     appName: metrics-server
     chartName: metrics-server-app
