--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -60,6 +60,20 @@ userConfig:
       values:
         NetExporter:
           NTPServers: 169.254.169.123
+  securityBundle:
+    configMap:
+      values:
+        userConfig:
+          kyverno:
+            configMap:
+              values:
+                kyverno:
+                  admissionController:
+                    tolerations:
+                    - key: "node.cluster.x-k8s.io/uninitialized"
+                      operator: "Exists"
+                      effect: "NoSchedule"
+
 apps:
   capi-node-labeler:
     appName: capi-node-labeler
