basedomain-prefix-cluster-name (#106)
* basedomain-prefix-cluster-name

* fix-default

* Update helm/default-apps-eks/templates/_helpers.tpl

Co-authored-by: Andreas Sommer <andreas.sommer87@googlemail.com>

---------

Co-authored-by: Andreas Sommer <andreas.sommer87@googlemail.com>

--- a/helm/default-apps-eks/values.yaml
+++ b/helm/default-apps-eks/values.yaml
@@ -1,5 +1,6 @@
 clusterName: ""
 organization: ""
+baseDomain: ""
 
 userConfig:
   certManager:
@@ -42,7 +43,7 @@ userConfig:
           annotations:
             eks.amazonaws.com/role-arn: arn:aws:iam::{{ include "aws-account-id" $ }}:role/{{ .Values.clusterName }}-Route53Manager-Role
         domainFilters:
-          - "{{ .Values.baseDomain }}"
+          - '{{ include "baseDomain" . }}'
         txtOwnerId: giantswarm-io-external-dns
         txtPrefix: "{{ .Values.clusterName }}"
         annotationFilter: giantswarm.io/external-dns=managed
